--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AI-powered tool to blend personal photos into Minecraft worlds using Next.js, TypeScript, and Replicate API",
   "private": true,
   "scripts": {
-    "dev": "next dev -H 0.0.0.0 --turbopack",
+    "dev": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "bunx biome lint --write && bunx tsc --noEmit",
